added fxGui added auth and reg via gui added netty client all tasks done